Fed logo shifting to the right sometimes bug fixed

--- a/src/Components/Home/CSS/Nav.module.css
+++ b/src/Components/Home/CSS/Nav.module.css
@@ -75,7 +75,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 8.4%;
+  width: 27.4%;
 }
 
 .fedP {
